Fix: vertcial alignment of arrows

--- a/frontend/src/_styles/table-component.scss
+++ b/frontend/src/_styles/table-component.scss
@@ -132,6 +132,9 @@
   td {
     overflow-x: initial;
     padding: 8px 12px !important;
+    &.has-number{
+      padding: 0px 0px 0px 12px !important;
+    }
 
 
     // &.has-number {
@@ -1301,7 +1304,7 @@
       top: 0px;
       bottom: 0px;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: center;
 
       .numberinput-up-arrow-table {
         right: 1px !important;
